# jira-automation

./: README.md  instruction.txt  pyproject.toml
jira-script/: jira.py
src/: cli.py  jira_cli.py  worker.py
tests/: test_cli.py  test_worker.py
